--- a/views/in.ejs
+++ b/views/in.ejs
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
     </head>
         <title>In List</title>
         
-        <script src = "/node_modules/jquery/dist/jquery.js" type = "text/javascript">
+        <script src="jq/jquery.js" type = "text/javascript">
         </script>
         <style type = "text/css">
             body {
@@ -32,7 +33,10 @@
                 padding: 15px;
                 text-align: center;
                 font-size: 2em
-            }            
+            } 
+            h2{
+                color : black;
+            }           
             tr:hover {background-color: #573b3b;}
 
         </style>
@@ -63,8 +67,14 @@
                     <td>22:28</td>
                     
                 </tr>
-                
-               
+                <% for(var i=0;i!=name.length;i++){%>
+                    <tr>
+                        <td><%= name[i]['DATE'] %></td>
+                        <td><%= name[i]['NUMBER'] %></td> 
+                        <td><%= name[i]['TIME'] %></td>
+                        
+                    </tr>
+                <%}%>
             </table>
         </div>
     </body>
