assests to asset

--- a/views/in.ejs
+++ b/views/in.ejs
@@ -7,7 +7,7 @@
     <title>Number_Plate</title>
     <script src="jq/jquery.js" type = "text/javascript"></script>
     <link rel="stylesheet" href="./style_sheet.css">
-    <!-- <link href="/assests/style.css" rel="stylesheet" type="text/css"/> -->
+    <!-- <link href="/assets/style.css" rel="stylesheet" type="text/css"/> -->
 </head>
 
 <body>
