--- a/views/in.ejs
+++ b/views/in.ejs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number_Plate</title>
     <script src="jq/jquery.js" type = "text/javascript"></script>
-    <link rel="stylesheet" href="./style_sheet.css">
-    <!-- <link href="/assets/style.css" rel="stylesheet" type="text/css"/> -->
+    <!-- <link rel="stylesheet" href="./style_sheet.css"> -->
+    <link rel="stylesheet" href="/style.css">
+    
 </head>
-
+<!-- isme mongodb se interface kaise krenge vo dhek le
+hn dekhta 5 min ok -->
 <body>
     <div class="main">
         <h1>Number Plate Detection</h1>
@@ -28,11 +30,11 @@
             <div class="scroll_bar">
 
                 <table>
-                        <% for(var i=0;i!=name.length;i++){%>
+                        <% for(var i=0;i!=in_.length;i++){%>
                             <tr>
-                                <td><%= name[i]['DATE'] %></td>
-                                <td><%= name[i]['NUMBER'] %></td> 
-                                <td><%= name[i]['TIME'] %></td>
+                                <td><%= in_[i]['DATE'] %></td>
+                                <td><%= in_[i]['NUMBER'] %></td> 
+                                <td><%= in_[i]['TIME'] %></td>
                                 
                             </tr>
                         <%}%>
@@ -132,11 +134,13 @@
             <div class="exit-scroll">
 
                 <table class="exit">
-                        <% for(var i=0;i!=name.length;i++){%>
+                        <% for(var i=0;i!=out_.length;i++){%>
                             <tr>
-                                <td><%= name[i]['DATE'] %></td>
-                                <td><%= name[i]['NUMBER'] %></td> 
-                                <td><%= name[i]['TIME'] %></td>
+                                <td><%= out_[i]['ENTRY_DATE'] %></td>
+                                <td><%= out_[i]['EXIT_DATE'] %></td>
+                                <td><%= out_[i]['NUMBER'] %></td> 
+                                <td><%= out_[i]['ENTRY_TIME'] %></td>
+                                <td><%= out_[i]['EXIT_TIME'] %></td>
                                 
                             </tr>
                         <%}%>
